--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="files/main.css" />
+    <link rel="stylesheet" type="text/css" href="files/stylesheets/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-    <link rel="icon" href="files/vavrologominiwhite.png" />
+    <link rel="icon" href="files/images/vavrologominiwhite.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -26,12 +26,12 @@
       <label for="showcheck" class="fa-bars show menubutton"></label>
       <input type="checkbox" id="showcheck" />
       <img
-        src="files/vavrologoblack.png"
+        src="files/images/vavrologoblack.png"
         alt="VAVRO"
         class="headerlogo hide"
         id="myID"
-        onmouseover="this.src='files/vavrologoaltblack.png'"
-        onmouseout="this.src='files/vavrologoblack.png'"
+        onmouseover="this.src='files/images/vavrologoaltblack.png'"
+        onmouseout="this.src='files/images/vavrologoblack.png'"
       />
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -223,9 +223,9 @@
                   <tr>
                     <td class="tableBoldExp"></td>
                     <td class="tableData">
-                      <a href="http://martinvavro.com/faktura.html" target="_blank">Link</a>
+                      <a href="faktura.html" target="_blank">Link</a>
                       /
-                      <a href="http://martinvavro.com/files/faktura2.js" target="_blank">Code</a>
+                      <a href="files/javascripts/faktura2.js" target="_blank">Code</a>
                     </td>
                   </tr>
                   <tr>
@@ -284,6 +284,6 @@
     </footer>
   </body>
 
-  <script src="files/cv_pagination.js"></script>
-  <script src="files/cv_pdf.js"></script>
+  <script src="files/javascripts/cv_pagination.js"></script>
+  <script src="files/javascripts/cv_pdf.js"></script>
 </html>
