--- a/photography.html
+++ b/photography.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="files/main.css" />
+    <link rel="stylesheet" type="text/css" href="files/stylesheets/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-    <link rel="icon" href="files/vavrologominiwhite.png" />
+    <link rel="icon" href="files/images/vavrologominiwhite.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -26,12 +26,12 @@
       <label for="showcheck" class="fa-bars show menubutton"></label>
       <input type="checkbox" id="showcheck" />
       <img
-        src="files/vavrologoblack.png"
+        src="files/images/vavrologoblack.png"
         alt="VAVRO"
         class="headerlogo hide"
         id="myID"
-        onmouseover="this.src='files/vavrologoaltblack.png'"
-        onmouseout="this.src='files/vavrologoblack.png'"
+        onmouseover="this.src='files/images/vavrologoaltblack.png'"
+        onmouseout="this.src='files/images/vavrologoblack.png'"
       />
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -41,15 +41,9 @@
         <li><a href="#contact" class="menuItem">CONTACT</a></li>
       </ul>
     </header>
-    <section class="content">
-      <div class="pageWrapper">
-        <a
-          href="https://lh3.googleusercontent.com/4HBJdaSwm4W0HyBIgvvGi9vtI5qAheKHI7gP4GMPj4r8sj42jlKBNQWCZKOTK1NEwm3yIAUm_aOMUAwn9lPeNupYudOg4LJlwwAITbEB0XhCGp7WtvsLLw2rMyOAWLc88_kSisM9CHw=w2400?source=screenshot.guru"
-        >
-          <img
-            src="https://lh3.googleusercontent.com/4HBJdaSwm4W0HyBIgvvGi9vtI5qAheKHI7gP4GMPj4r8sj42jlKBNQWCZKOTK1NEwm3yIAUm_aOMUAwn9lPeNupYudOg4LJlwwAITbEB0XhCGp7WtvsLLw2rMyOAWLc88_kSisM9CHw=w600-h315-p-k"
-          />
-        </a>
+    <section class="full-height" id="about">
+      <div class="centered-div">
+        <h2>Under construction</h2>
       </div>
     </section>
     <footer class="footer" id="contact">
@@ -68,7 +62,4 @@
       </div>
     </footer>
   </body>
-
-  <script src="files/cv_pagination.js"></script>
-  <script src="files/cv_pdf.js"></script>
 </html>
