--- a/minesweeper.html
+++ b/minesweeper.html
@@ -9,6 +9,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="files/images/vavrologominiwhite.png" />
     <link rel="stylesheet" type="text/css" href="files/stylesheets/main.css" />
     <link rel="stylesheet" href="files/stylesheets/minesweeper.css" />
@@ -237,4 +238,3 @@
     <script async defer src="files/javascripts/minesweeper/View.js"></script>
   </body>
 </html>
-javascripts/minesweeper/
