Minor design changes, cleanup

--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@
         <li><a href="#contact" class="menuItem">CONTACT</a></li>
       </ul>
     </header>
-    <section class="content">
+    <section class="content cvsection">
       <div class="pageWrapper">
         <div class="page hvr-curl-top-right" id="firstPageCv">
           <div class="CV subpage">
