--- a/faktura.html
+++ b/faktura.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="stylesheet" type="text/css" href="files/stylesheets/main.css" />
     <link rel="stylesheet" type="text/css" href="files/stylesheets/faktura.css" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="files/images/vavrologominiwhite.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, target-densitydpi=device-dpi" />
@@ -12,78 +15,75 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KLKTR1N9G6"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag("config", "G-KLKTR1N9G6");
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-KLKTR1N9G6");
     </script>
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="menuHeader">
-      <label for="showcheck" class="fa-bars show menubutton"></label>
-      <input type="checkbox" id="showcheck" />
-      <img
-        src="files/images/vavrologoblack.png"
-        alt="VAVRO"
-        class="headerlogo hide"
-        id="myID"
-        onmouseover="this.src='files/images/vavrologoaltblack.png'"
-        onmouseout="this.src='files/images/vavrologoblack.png'"
-      />
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="cv.html" class="menuItem">CV</a></li>
-        <li><a href="minesweeper.html" class="menuItem">MINESWEEPER</a></li>
-        <li><a href="faktura.html" class="menuItem" id="active">FAKTURA</a></li>
-        <li><a href="#contact" class="menuItem">CONTACT</a></li>
-      </ul>
+        <label for="showcheck" class="fa-bars show menubutton"></label>
+        <input type="checkbox" id="showcheck" />
+        <img src="files/images/vavrologoblack.png" alt="VAVRO" class="headerlogo hide" id="myID" onmouseover="this.src='files/images/vavrologoaltblack.png'" onmouseout="this.src='files/images/vavrologoblack.png'" />
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="minesweeper.html" class="menuItem">MINESWEEPER</a></li>
+            <li><a href="cv.html" class="menuItem">CV</a></li>
+            <li><a href="faktura.html" class="menuItem" id="active">FAKTURA</a></li>
+            <li><a href="#contact" class="menuItem">CONTACT</a></li>
+        </ul>
     </header>
     <section class="body" id="background">
-      <div class="flex-center">
-        <div class="faktura">
-          <h2>Výber eshopu</h2>
-          <div class="eshop">
-            <div class="radios">
-              <input type="radio" name="eshop" id="k" value="k" class="toggle toggle-left" checked />
-              <label for="k" class="btn">MadeByKristina</label>
-              <input type="radio" name="eshop" id="e" value="e" class="toggle toggle-right" />
-              <label for="e" class="btn">Needo</label>
-            </div>
-          </div>
+        <div class="flex-center">
+            <div class="faktura">
+                <h2>Výber eshopu</h2>
+                <div class="eshop">
+                    <div class="radios">
+                        <input type="radio" name="eshop" id="k" value="k" class="toggle toggle-left" checked />
+                        <label for="k" class="btn">MadeByKristina</label>
+                        <input type="radio" name="eshop" id="e" value="e" class="toggle toggle-right" />
+                        <label for="e" class="btn">Needo</label>
+                    </div>
+                </div>
 
-          <h2>Nahratie MoneyS3 exportu</h2>
-          <div class="demo-droppable">
-            <p>Sem presuň súbory alebo po kliknutí nájdi</p>
-          </div>
-          <h2>Výstup pre kontrolu</h2>
-          <div class="output">
-            <p id="demo"></p>
-          </div>
-          <br />
+                <h2>Nahratie MoneyS3 exportu</h2>
+                <div class="demo-droppable">
+                    <p>Sem presuň súbory alebo po kliknutí nájdi</p>
+                </div>
+                <h2>Výstup pre kontrolu</h2>
+                <div class="output">
+                    <p id="demo"></p>
+                </div>
+                <br />
+            </div>
         </div>
-      </div>
-      <div class="flex-bottom">
-        <p id="logo">Faktura 1.2</p>
-      </div>
+        <div class="flex-bottom">
+            <p id="logo">Faktura 1.2</p>
+        </div>
     </section>
     <footer class="footer" id="contact">
-      <div class="footerchild">
-        <h4>CONTACT</h4>
-        <div class="icons">
-          <a href="https://www.linkedin.com/in/martin-vavro-4841a384/" target="_blank"><i class="fa fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/vavromartin/" target="_blank"><i class="fa fa-facebook-official"></i></a>
-          <a href="https://www.instagram.com/martinvavro/" target="_blank"><i class="fa fa-instagram"></i></a>
+        <div class="footerchild">
+            <h4>CONTACT</h4>
+            <div class="icons">
+                <a href="https://www.linkedin.com/in/martin-vavro-4841a384/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/vavromartin/" target="_blank"><i class="fa fa-facebook-official"></i></a>
+                <a href="https://www.instagram.com/martinvavro/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.github.com/martinvavro/" target="_blank"><i class="fa fa-github"></i></a>
+            </div>
+            <p>
+                <i class="fa fa-envelope left"></i>
+                <a href="mailto:mail@martinvavro.com"> mail@martinvavro.com </a>
+            </p>
+            <p class="credits">created by Martin Vavro 2021</p>
         </div>
-        <p>
-          <i class="fa fa-envelope left"></i>
-          <a href="mailto:mail@martinvavro.com"> mail@martinvavro.com </a>
-        </p>
-        <p class="credits">created by Martin Vavro 2021</p>
-      </div>
     </footer>
     <script src="files/javascripts/faktura.js"></script>
-  </body>
+</body>
+
 </html>
