--- a/minesweeper.html
+++ b/minesweeper.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <!-- Pouzivam Wedos miniweb hosting, ktory podporuje iba nahravanie obrazkov, css a js suborov.
+<!-- Pouzivam Wedos miniweb hosting, ktory podporuje iba nahravanie obrazkov, css a js suborov.
    Ochranu som musel prekonat pri zvukoch. (Preto maju vsetky priponu .png)  -->
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Martin Vavro - Minesweeper</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="files/images/vavrologominiwhite.png" />
     <link rel="stylesheet" type="text/css" href="files/stylesheets/main.css" />
@@ -16,207 +19,198 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KLKTR1N9G6"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag("config", "G-KLKTR1N9G6");
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-KLKTR1N9G6");
     </script>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="menuHeader">
-      <label for="showcheck" class="fa-bars show menubutton"></label>
-      <input type="checkbox" id="showcheck" />
-      <img
-        src="files/images/vavrologoblack.png"
-        alt="VAVRO"
-        class="headerlogo hide"
-        id="myID"
-        onmouseover="this.src='files/images/vavrologoaltblack.png'"
-        onmouseout="this.src='files/images/vavrologoblack.png'"
-      />
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="cv.html" class="menuItem">CV</a></li>
-        <li><a href="minesweeper.html" class="menuItem" id="active">MINESWEEPER</a></li>
-        <li><a href="photography.html" class="menuItem">PHOTOGRAPHY</a></li>
-        <li><a href="index.html#contact" class="menuItem">CONTACT</a></li>
-      </ul>
+        <label for="showcheck" class="fa-bars show menubutton"></label>
+        <input type="checkbox" id="showcheck" />
+        <img src="files/images/vavrologoblack.png" alt="VAVRO" class="headerlogo hide" id="myID" onmouseover="this.src='files/images/vavrologoaltblack.png'" onmouseout="this.src='files/images/vavrologoblack.png'" />
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="minesweeper.html" class="menuItem" id="active">MINESWEEPER</a></li>
+            <li><a href="cv.html" class="menuItem">CV</a></li>
+            <!-- <li><a href="photography.html" class="menuItem">PHOTOGRAPHY</a></li> -->
+            <li><a href="index.html#contact" class="menuItem">CONTACT</a></li>
+        </ul>
     </header>
     <section class="windowsDesktop">
-      <div class="mineIcon">
-        <a id="mineIcon">
-          <img src="files/minesweeperAssets/icon.png" alt="Minesweeper" />
-          <p>Minesweeper</p>
-        </a>
-      </div>
-      <div class="mineIcon computer">
-        <a id="computer">
-          <img src="files/minesweeperAssets/computer.png" alt="My Computer" />
-          <p>My Computer</p>
-        </a>
-      </div>
-
-      <div class="bsod">
-        <img src="files/minesweeperAssets/bsod.png" alt="bsod" />
-      </div>
-
-      <div class="modal window" id="modalWindow">
-        <div class="windowHeader">
-          <img src="files/minesweeperAssets/iconHeader.png" alt="Minesweeper Icon" height="20" width="20" />
-          <p id="headerText"></p>
-          <a class="close hide"></a>
+        <div class="mineIcon">
+            <a id="mineIcon">
+                <img src="files/minesweeperAssets/icon.png" alt="Minesweeper" />
+                <p>Minesweeper</p>
+            </a>
         </div>
-        <div class="contentMine">
-          <div class="cont">
-            <div id="highscore">
-              <div class="container">
-                <img alt="New record" src="files/minesweeperAssets/newRecord.svg" />
-                <h1>New Record!</h1>
-                <img alt="New record" src="files/minesweeperAssets/newRecord.svg" />
-                <p>Difficulty</p>
-                <p class="record" id="recordDif"></p>
-                <p>Time</p>
-                <p class="record" id="recordTim"></p>
-              </div>
-              <div class="inline">
-                <a class="buttonWindow hide menuScores">High Scores</a>
-                <a class="buttonWindow hide">Close</a>
-              </div>
+        <div class="mineIcon computer">
+            <a id="computer">
+                <img src="files/minesweeperAssets/computer.png" alt="My Computer" />
+                <p>My Computer</p>
+            </a>
+        </div>
+
+        <div class="bsod">
+            <img src="files/minesweeperAssets/bsod.png" alt="bsod" />
+        </div>
+
+        <div class="modal window" id="modalWindow">
+            <div class="windowHeader">
+                <img src="files/minesweeperAssets/iconHeader.png" alt="Minesweeper Icon" height="20" width="20" />
+                <p id="headerText"></p>
+                <a class="close hide"></a>
             </div>
-            <div id="highscores">
-              <div class="tableContainer container">
-                <table>
-                  <tr id="tdif">
-                    <th>Difficulty</th>
-                  </tr>
-                  <tr id="tsiz">
-                    <th>Size</th>
-                  </tr>
-                  <tr id="ttim">
-                    <th>Time</th>
-                  </tr>
-                </table>
-              </div>
-              <div class="inline">
-                <a class="buttonWindow" id="clearStorage">Reset</a>
-                <a class="buttonWindow hide">Close</a>
-              </div>
+            <div class="contentMine">
+                <div class="cont">
+                    <div id="highscore">
+                        <div class="container">
+                            <img alt="New record" src="files/minesweeperAssets/newRecord.svg" />
+                            <h1>New Record!</h1>
+                            <img alt="New record" src="files/minesweeperAssets/newRecord.svg" />
+                            <p>Difficulty</p>
+                            <p class="record" id="recordDif"></p>
+                            <p>Time</p>
+                            <p class="record" id="recordTim"></p>
+                        </div>
+                        <div class="inline">
+                            <a class="buttonWindow hide menuScores">High Scores</a>
+                            <a class="buttonWindow hide">Close</a>
+                        </div>
+                    </div>
+                    <div id="highscores">
+                        <div class="tableContainer container">
+                            <table>
+                                <tr id="tdif">
+                                    <th>Difficulty</th>
+                                </tr>
+                                <tr id="tsiz">
+                                    <th>Size</th>
+                                </tr>
+                                <tr id="ttim">
+                                    <th>Time</th>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="inline">
+                            <a class="buttonWindow" id="clearStorage">Reset</a>
+                            <a class="buttonWindow hide">Close</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
-
-      <main class="window" id="minesweeper">
-        <div id="header" class="windowHeader">
-          <img src="files/minesweeperAssets/iconHeader.png" alt="Minesweeper Icon" height="20" width="20" />
-          <p>Minesweeper</p>
-          <a class="close hide"></a>
-        </div>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="javascript:void(0)" class="navGame">Game</a>
-              <div class="dropdown-content">
-                <a id="new" class="restart">New</a>
-                <hr />
-                <a id="menuOptions">Options</a>
-                <hr />
-                <a class="menuScores">High Scores</a>
-                <hr />
-                <a class="hide">Exit</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a class="navHelp">Help</a>
-              <div class="dropdown-content">
-                <a id="menuDocs">Docs</a>
-                <hr />
-                <a id="menuHelp">Tutorial</a>
-              </div>
-            </li>
-          </ul>
-        </nav>
-
-        <div class="section" id="game">
-          <div class="status">
-            <canvas class="remaining" id="remaining" width="70" height="34"></canvas>
-            <a class="restart sun"></a>
-            <canvas class="time" id="time" width="70" height="34"></canvas>
-          </div>
-          <div class="board"></div>
-          <div class="mobileMenu">
-            <a class="mobButton" id="center"></a>
-            <a class="mobButton mine" id="toggle"></a>
-            <a class="mobButton backDisabled" id="back"></a>
-          </div>
         </div>
 
-        <div class="section" id="options">
-          <form class="options">
-            <p>Game Settings</p>
-            <hr />
-            <p>Difficulty</p>
-            <div class="difficulty">
-              <input type="radio" name="difficulty" id="hard" value="hard" /> Hard
-              <input type="radio" name="difficulty" id="medium" value="medium" />
-              Medium
-              <input type="radio" name="difficulty" id="easy" value="easy" checked />
-              Easy
-              <input type="radio" name="difficulty" id="custom" value="custom" />
-              Custom
+        <main class="window" id="minesweeper">
+            <div id="header" class="windowHeader">
+                <img src="files/minesweeperAssets/iconHeader.png" alt="Minesweeper Icon" height="20" width="20" />
+                <p>Minesweeper</p>
+                <a class="close hide"></a>
             </div>
-            <input type="number" id="mines" value="10" min="1" />
-            <label for="mines">Mines</label>
-            <hr />
-            <p>Size</p>
-            <input type="number" id="rows" value="10" min="2" />
-            <label for="rows">Rows</label>
-            <input type="number" id="columns" value="10" min="2" />
-            <label for="columns">Columns</label>
-            <hr />
-            <p>Custom settings</p>
-            <input type="checkbox" id="easyStart" checked />
-            <label for="easyStart">Easy Start</label>
-            <input type="checkbox" id="sound" checked />
-            <label for="sound">Sound</label>
-            <input type="checkbox" id="mobileMenu" checked />
-            <label for="mobileMenu">Mobile Menu</label>
-            <input type="checkbox" id="backButton" disabled />
-            <label for="backButton">Back Button</label>
-            <hr />
-            <div class="submit">
-              <input class="buttonWindow" type="reset" id="reset" />
-              <input class="buttonWindow" type="button" id="save" value="Save" />
-            </div>
-          </form>
-        </div>
-        <div class="section text" id="docs">
-          <ul>
-            <li class="hidden"></li>
-          </ul>
-          <h3 id="heading">W3C</h3>
-          <hr />
-          <div id="content"></div>
-          <div class="pagination">
-            <a class="buttonWindow" id="previous">Previous</a>
-            <a class="buttonWindow" id="next">Next</a>
-          </div>
-        </div>
-      </main>
+            <nav>
+                <ul>
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="navGame">Game</a>
+                        <div class="dropdown-content">
+                            <a id="new" class="restart">New</a>
+                            <hr />
+                            <a id="menuOptions">Options</a>
+                            <hr />
+                            <a class="menuScores">High Scores</a>
+                            <hr />
+                            <a class="hide">Exit</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a class="navHelp">Help</a>
+                        <div class="dropdown-content">
+                            <a id="menuDocs">Docs</a>
+                            <hr />
+                            <a id="menuHelp">Tutorial</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
 
-      <footer>
-        <a href="index.html" class="start">
-          <img src="files/minesweeperAssets/start.png" alt="Start Icon" />
-          <b>Start</b>
-        </a>
-        <div class="clock">
-          <p id="clock"></p>
-        </div>
-      </footer>
+            <div class="section" id="game">
+                <div class="status">
+                    <canvas class="remaining" id="remaining" width="70" height="34"></canvas>
+                    <a class="restart sun"></a>
+                    <canvas class="time" id="time" width="70" height="34"></canvas>
+                </div>
+                <div class="board"></div>
+                <div class="mobileMenu">
+                    <a class="mobButton" id="center"></a>
+                    <a class="mobButton mine" id="toggle"></a>
+                    <a class="mobButton backDisabled" id="back"></a>
+                </div>
+            </div>
+
+            <div class="section" id="options">
+                <form class="options">
+                    <p>Game Settings</p>
+                    <hr />
+                    <p>Difficulty</p>
+                    <div class="difficulty">
+                        <input type="radio" name="difficulty" id="hard" value="hard" /> Hard
+                        <input type="radio" name="difficulty" id="medium" value="medium" /> Medium
+                        <input type="radio" name="difficulty" id="easy" value="easy" checked /> Easy
+                        <input type="radio" name="difficulty" id="custom" value="custom" /> Custom
+                    </div>
+                    <input type="number" id="mines" value="10" min="1" />
+                    <label for="mines">Mines</label>
+                    <hr />
+                    <p>Size</p>
+                    <input type="number" id="rows" value="10" min="2" />
+                    <label for="rows">Rows</label>
+                    <input type="number" id="columns" value="10" min="2" />
+                    <label for="columns">Columns</label>
+                    <hr />
+                    <p>Custom settings</p>
+                    <input type="checkbox" id="easyStart" checked />
+                    <label for="easyStart">Easy Start</label>
+                    <input type="checkbox" id="sound" checked />
+                    <label for="sound">Sound</label>
+                    <input type="checkbox" id="mobileMenu" checked />
+                    <label for="mobileMenu">Mobile Menu</label>
+                    <input type="checkbox" id="backButton" disabled />
+                    <label for="backButton">Back Button</label>
+                    <hr />
+                    <div class="submit">
+                        <input class="buttonWindow" type="reset" id="reset" />
+                        <input class="buttonWindow" type="button" id="save" value="Save" />
+                    </div>
+                </form>
+            </div>
+            <div class="section text" id="docs">
+                <ul>
+                    <li class="hidden"></li>
+                </ul>
+                <h3 id="heading">W3C</h3>
+                <hr />
+                <div id="content"></div>
+                <div class="pagination">
+                    <a class="buttonWindow" id="previous">Previous</a>
+                    <a class="buttonWindow" id="next">Next</a>
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <a href="index.html" class="start">
+                <img src="files/minesweeperAssets/start.png" alt="Start Icon" />
+                <b>Start</b>
+            </a>
+            <div class="clock">
+                <p id="clock"></p>
+            </div>
+        </footer>
     </section>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -236,5 +230,6 @@
     <script async defer src="files/javascripts/minesweeper/Game.js"></script>
     <script async defer src="files/javascripts/minesweeper/Service.js"></script>
     <script async defer src="files/javascripts/minesweeper/View.js"></script>
-  </body>
+</body>
+
 </html>
