--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h2>Hello, my name is Martin and welcome to my personal website!</h2>
       <div>
         <a href="minesweeper.html">Go play some <b>minesweeper</b></a>
-        <a href="photography.html">or check out my <b>cv</b>.</a>
+        <a href="cv.html">or check out my <b>cv</b>.</a>
       </div>
       <p><b>Disclaimer:</b> I'm just using the free static website hosting included by my domain provider. This is not
         supposed to be
